kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ms-hw-5-deployment-1
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app:  ms-hw-5-app
      version: v1
  template:
    metadata:
      name:  ms-hw-5-v1
      labels:
        app:  ms-hw-5-app
        version: v1
    spec:
      containers:
        - image: kpolyanichko/proxy-app:latest
          name: ms-hw-5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  ms-hw-5-deployment-2
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app:  ms-hw-5-app
      version: v2
  template:
    metadata:
      name:  ms-hw-5-v2
      labels:
        app:  ms-hw-5-app
        version: v2
    spec:
      containers:
        - image: kpolyanichko/proxy-app:latest
          name: ms-hw-5
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 5

---
apiVersion: v1
kind: Service
metadata:
  name:  ms-hw-5-service
  namespace: default
  labels:
    app:  ms-hw-5-app
spec:
  selector:
    app:  ms-hw-5-app
  type: NodePort
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
      name: api
