kubernetes/destinationrule.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name:  ms-hw-5-destination-rule
  namespace: default
spec:
  host:  ms-hw-5-service
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
